--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
+
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.59
-loader_version=0.11.6
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.19.3
+	yarn_mappings=1.19.3+build.1
+	loader_version=0.14.11
+
 # Mod Properties
-mod_version=1.0
-maven_group=me.luligabi
-archives_base_name=examplemod
+	mod_version = 1.0.0
+	maven_group = com.example
+	archives_base_name = fabric-example-mod
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.40.1+1.17
+	fabric_version=0.68.1+1.19.3
